# miniprojects

./: .gitignore  README.md
SpellBee/: count_SB.ipynb
SpellBee/spellbee-analysis/: README.md  pyproject.toml  requirements.txt
SpellBee/spellbee-analysis/data/wordlists/: wordlist.txt
SpellBee/spellbee-analysis/notebooks/: count_SB.ipynb
SpellBee/spellbee-analysis/src/: count.py  utils.py  validators.py  wordlist.py
SpellBee/spellbee-analysis/tests/: test_count.py  test_wordlist.py
